--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,5 +1,5 @@
 @misc{RCSP.jl,
-	author  = {BatyLeo <leo.baty67@gmail.com> and contributors},
+	author  = {BatyLeo and contributors},
 	title   = {RCSP.jl},
 	url     = {https://github.com/BatyLeo/RCSP.jl},
 	version = {v0.1.0},
