add some tutorials

--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,4 +1,4 @@
-@misc{RCSP.jl,
+@misc{ConstrainedShortestPaths.jl,
 	author  = {BatyLeo and contributors},
 	title   = {ConstrainedShortestPaths.jl},
 	url     = {https://github.com/BatyLeo/ConstrainedShortestPaths.jl},
