--- a/CITATION.bib
+++ b/CITATION.bib
@@ -1,5 +1,5 @@
 @misc{ConstrainedShortestPaths.jl,
-	author  = {BatyLeo and contributors},
+	author  = {Léo Baty and contributors},
 	title   = {ConstrainedShortestPaths.jl},
 	url     = {https://github.com/BatyLeo/ConstrainedShortestPaths.jl},
 	version = {v0.1.0},
